--- a/apps/dash-web-trader/assets/style.css
+++ b/apps/dash-web-trader/assets/style.css
@@ -419,6 +419,8 @@ body{
 
 .table-news{
   border: 1px solid #b2b2b2;
+  width: 100%;
+  max-height: 500px;
 }
 
 .table-orders{
@@ -505,10 +507,7 @@ th{
   height: 60px;
 }
 
-.chart-top-bar{
-  padding: 12px;
-  background-color: #30333d;
-}
+
 
 button{
   color: white;
@@ -579,10 +578,21 @@ div.Select-value, .Select-control,div.period, .Select-input{
   width: 100px;
 }
 
+.chart-top-bar{
+  background-color: #30333d;
+}
+
 .graph-close{
-  font-size: 16px;
-  color:white;
   cursor: pointer;
+  display: inline-block;
+}
+
+.graph-top-right{
+  float: right;
+}
+
+.graph-top-bar{
+  display: inline-block;
 }
 
 .bottom-dropdown{
@@ -595,7 +605,75 @@ div.Select-value, .Select-control,div.period, .Select-input{
 }
 
 .button-buy-sell-chart{
-  margin: 0px 7px 7px 10px;
+  width: 48%;
   text-align: center;
   display: inline-block;
+}
+
+
+.button-buy-sell-chart-right{
+  width: 48%;
+  text-align: center;
+  display: inline-block;
+  float: right;
+}
+
+button{
+  margin: 10px;
+}
+
+input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], textarea, select{
+  border: 1px solid #b4b4b4;
+  background-color:#262a30;
+  border-radius: 5px;
+  color: #b4b4b4;
+}
+
+.modal {
+  display: block;  /*Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1000; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+  background-color: #262a30;
+  margin: 5% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #b4b4b4;
+  border-radius: 5px;
+  width: 50%; /* Could be more or less, depending on screen size */
+  color:#b4b4b4;
+}
+
+th, td{
+  padding: 0px;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #22252b;
+  border: 2px solid #b2b2b270;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #b5b5b5;
+  padding: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b5b5b570;
 }
