--- a/apps/dash-clinical-analytics/assets/clinical-analytics.css
+++ b/apps/dash-clinical-analytics/assets/clinical-analytics.css
@@ -19,6 +19,7 @@ body {
     background-color: #f9f9f9;
     color: #333333;
     font-size: 15px;
+    margin: 0px;
 }
 
 hr {
@@ -119,8 +120,33 @@ H5, H3 {
   */
 
 @media only screen and (max-width: 750px) {
+
+    body {
+        font-size: 13px;
+    }
+
+    .banner {
+        height: 6rem;
+    }
+
+    h5 {
+        font-size: 1.8rem;
+    }
+
+    h3 {
+        font-size: 2.5rem;
+    }
+
+    #intro {
+        margin: 10px 0px;
+    }
+
     #left-column, #right-column {
         width: 100%;
+    }
+
+    #reset-btn-outer {
+        text-align: center;
     }
 
     .table-row > div {
@@ -145,14 +171,13 @@ H5, H3 {
     #patient_volume_card > b, #wait_time_card > b {
         line-height: 2.5;
         font-size: 13px;
-        display:block;
-        text-align:center;
+        display: block;
+        text-align: center;
     }
 
     .annotation-text {
-        font-size :0.8rem !important;
+        font-size: 0.8rem !important;
     }
-
 
 }
 
