fixing table overflow

--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -121,6 +121,10 @@ table {
   font-family: Ubuntu;
 }
 
+.table {
+  overflow: scroll;
+}
+
 @media (min-width: 960px) {
   #lead_grid {
     display: grid;
